--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,7 +1,19 @@
 .Navbar {
   width: 100%;
   padding: 0.5rem 0;
-  background-color: #1C3643;
+  background-color: #1C3650;
+  opacity: 82%;
+}
+.navbar {
+  background: #E6000000;
+}
+
+ #Buscador {
+  
+  width: 200px;
+  border: transparent;
+  border-bottom: solid 1px #ccc;
+  padding: 10px 10px 10px 30px;
 }
 
 .Navbar__brand {
@@ -17,9 +29,9 @@
 }
 
 .Navbar__brand-logo {
-    margin-right: 0.5rem;
-    margin-left: 2.5rem;
-    width: 100px;
-    height: 100px;
+  margin-right: 0.5rem;
+  margin-left: 2.5rem;
+  width: 100px;
+  height: 100px;
 
 }
