--- a/src/pages/styles/BadgeNew.css
+++ b/src/pages/styles/BadgeNew.css
@@ -1,8 +1,15 @@
 .BadgeNew__hero {
-  width: 100%;
-  padding: 2rem 0;
-  background: url('../../images/stars.svg'), #1B1B25;
-  background-repeat: repeat;
-  margin-bottom: 1rem;
-  color: #ffffff;
+      width: 100%;
+    padding: 2rem 0;
+    background: url(/static/media/stars.1d17360a.svg), #1B1B25;
+    background-repeat: repeat;
+    margin-bottom: 1rem;
+    color: #ffffff;
+    POSITION: relative;
+    top: -1px;
+}
+
+
+video {
+  width: 1000px !important;
 }
